data/all_generated_tests/raw_wast_tests/return_EdgeCaseFailuresinbr_table_3041.wast
;; 10. **Test: `br_table` With Mixed Valid and Invalid Index Followed by Return**     - **Description**: Integrate `br_table` with both valid and invalid indices, followed by a `return` to check error handling pathways before safely returning.     - **Constraint**: Verifying robust handling of mixed valid and invalid indices leading to proper function return.

(assert_invalid
  (module
    (func $type-value-mixed-in-br_table (result i32)
      (i32.const 0)
      (block (result i32)
        (br_table 0 1 (return))
      )
    )
  )
  "type mismatch"
)